# CryptoLens

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: config.py  main.py
src/db/: qdrant.py  redis.py
src/rag/: embedder.py  generator.py  pipeline.py  prompt.py  retriever.py
tests/test_rag/: conftest.py  test_embedder.py  test_generator.py  test_pipeline.py  test_prompt.py  test_qdrant.py  test_redis.py  test_retriever.py
