[project]
name = "cryptolens"
version = "0.1.0"
description = "Cross-lingual Crypto AI Research Chatbot"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "anthropic>=0.87",
    "openai>=2.30",
    "qdrant-client>=1.17",
    "redis>=7.4",
    "pydantic-settings>=2.13",
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "feedparser>=6.0",
    "apscheduler>=3.11",
    "python-telegram-bot>=22.7",
    "telethon>=1.42",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"